Issue #3119061 by jrockowitz, richard.thomas: Flex rule for #states visibility doesn't use the same breakpoint as the other flexbox rules

--- a/css/webform.element.flexbox.css
+++ b/css/webform.element.flexbox.css
@@ -6,12 +6,21 @@
  * @see /webform/test_element_flexbox_flex
  */
 
+
 @media (min-width: 768px) {
 
   .webform-flexbox {
     display: -webkit-flex;
     display: flex;
     margin: 1em -0.5em;
+  }
+
+  /**
+   * Make sure flexbox is always using 'display: flex' when toggled via #states.
+   * @see https://stackoverflow.com/questions/38491653/jquery-show-a-flex-box/4121
+   */
+  .webform-flexbox.js-webform-states-hidden[style*="display: block"] {
+    display: flex !important;
   }
 
   .webform-flexbox .webform-flexbox {
