--- a/css/webform.form.css
+++ b/css/webform.form.css
@@ -18,14 +18,6 @@
 }
 
 /**
- * Make sure flexbox is always using 'display: flex' when toggled via #states.
- * @see https://stackoverflow.com/questions/38491653/jquery-show-a-flex-box/4121
- */
-.webform-flexbox.js-webform-states-hidden[style*="display: block"] {
-  display: flex !important;
-}
-
-/**
  * Container inline
  */
 .form-item .container-inline {
